.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

17.11.0  2017-11-15

New Features:

  * util-security: Added `c.t.util.security.PrivateKeyFile` for reading PKCS#8
    PEM formatted `PrivateKey` files. ``PHAB_ID=D105266``

Bug Fixes:
  * util-core: `c.t.io.BufByteWriter.fixed(size).owned()` will only represent bytes
    explicitly written instead of the full size of the backing array, `size`.
    ``PHAB_ID=D112938``

17.10.0  2017-10-26

Release Version Changes:
  * From now on, release versions will be based on release date in the format of
    YY.MM.x where x is a patch number. ``PHAB_ID=D101244``

New Features:

  * util-intellij: Create util-intellij project and publish IntelliJ capture
    points plugin for debugging asynchronous stack traces of code using Twitter
    Futures in Scala 2.11.11. ``PHAB_ID=D96782``

API Changes:

  * util-app: c.t.app.Flag.let and letClear are now generic in their return type.
    ``PHAB_ID=D93951``

Bug Fixes:
  * util-core: Fix Buf.ByteArray.Shared.apply(bytes,begin,end) constructor function.
    ``PHAB_ID=D100648``

Runtime Behavior Changes:

  * util-core: c.t.io.Buf.ByteArray.[Owned.Shared](Array[Byte], begin, end) now
    validates its input arguments. ``PHAB_ID=D100648``

  * util-jvm: The `jvm/mem/postGC/{poolName}/max` metric has been removed
    because it is the same as the `jvm/mem/current/{poolName}/max` metric.
    ``PHAB_ID=D95291``

  * util-security: Assert validity of X.509 certificates when read from a file.
    Attempting to read a `c.t.util.security.X509CeritificateFile` will now assert
    that the certificate is valid, i.e., if the current date and time are within
    the validity period given in the certificate. ``PHAB_ID=D88745``

7.1.0  2017-09-06

API Changes:
