@@ -5,13 +5,11 @@ scala_library(
     repo = artifactory,
   ),
   dependencies=[
-    '3rdparty/jvm/com/google/guava',
     'util/util-core/src/main/scala',
   ],
   fatal_warnings=True,
   sources=rglobs('*.scala'),
   exports=[
-    '3rdparty/jvm/com/google/guava',
     'util/util-core/src/main/scala:scala',
   ]
 
